--- a/www/views/about.html
+++ b/www/views/about.html
@@ -10,6 +10,7 @@
     <!-- Le styles -->
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/index/index.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -51,6 +52,11 @@
       </div>
     </div> <!-- /container -->
 
+    <footer>
+
+      Footer section!!About footer!!!!0------
+
+    </footer>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
