--- a/www/views/about.html
+++ b/www/views/about.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <h2 id="title">About Page</h2>
+    <h2 id="title">About yagnei 大功告成 ！！Page!!!!</h2>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
