--- a/www/scss/index/index.scss
+++ b/www/scss/index/index.scss
@@ -17,13 +17,13 @@ footer{
 }
 
 h1{
-  color:#FFF;
+  color:yellow;
   background:$color;
   font-size:20px;
 }
 
 p{
   color:$color;
-  background:black;
+  background:#FFF;
   border:1px solid pink;
 }
